@@ -1,10 +1,11 @@
 WeeChat - Wee Enhanced Environment for Chat
 ===========================================
 
-ChangeLog - 2004-03-27
+ChangeLog - 2004-05-31
 
 
 Version 0.0.6 (under dev!):
+   * improved channel highlight (priority to message vs join/part)
    * fixed bug when opened private win and remote user changes his nick
    * /query command added (starts private conversation)
    * IRC messages 476, 477 added
